# llama_3_8b_sentiment_analysis_tests

./: .gitignore  LICENSE  README.md  config.yaml  generate_heatmaps.py  generate_model_comparison_report.py  generate_model_metrics.py  generate_model_sentiments.py  main.py  model_comparisons.xlsx  model_details.csv  pyproject.toml  statistical_comparisons.csv  utils.py  web_scraper.py
d3/: index.html  sentiments_summary.json  transformed_data.json
messages/: sentiment_system_message.txt  sentiment_user_first_prompt.txt  sentiment_user_message.txt
reports/: model_comparison.csv  model_comparison.xlsx  model_comparisons.xlsx  model_details.csv  model_metrics.csv  model_metrics.xlsx  sentiment_analysis_3d_visualization_cleaner.html  statistical_comparisons.csv  ~$model_comparisons.xlsx
sentiments/dolphin-mistral_7b-v2.8-fp16/: MSFT_0.json  MSFT_1.json  MSFT_10.json  MSFT_11.json  MSFT_12.json  MSFT_13.json  MSFT_2.json  MSFT_3.json  MSFT_4.json  MSFT_5.json  MSFT_6.json  MSFT_7.json  MSFT_8.json  MSFT_9.json  NVDA_0.json  NVDA_1.json  NVDA_10.json  NVDA_11.json  NVDA_12.json  NVDA_13.json  NVDA_2.json  NVDA_3.json  NVDA_4.json  NVDA_5.json  NVDA_6.json  NVDA_7.json  NVDA_8.json  NVDA_9.json
sentiments/dolphin-mistral_7b-v2.8-q4_K_M/: MSFT_0.json  MSFT_1.json  MSFT_10.json  MSFT_11.json  MSFT_12.json  MSFT_13.json  MSFT_2.json  MSFT_3.json  MSFT_4.json  MSFT_5.json  MSFT_6.json  MSFT_7.json  MSFT_8.json  MSFT_9.json  NVDA_0.json  NVDA_1.json  NVDA_10.json  (+11 more)
utils/: analysis_utils.py  context.py  error_decorator.py  file_utils.py  validation_utils.py  web_scraper.py
(+644 files in other folders)
