
[tool.poetry]
name = "llama_3_8b_sentiment_analysis_tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
BeautifulSoup4 = "^4.12.3"
yfinance = "^0.2.38"
FinNews = "^1.1.0"
langchain-community = "^0.0.38"
setuptools = "^69.5.1"
requests-cache = "^1.2.0"
pydantic = "^2.7.1"
pandas = "^2.2.2"
scipy = "^1.13.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
